Fix padding on mobile

--- a/wp-content/themes/magus/assets/css/editor-style.css
+++ b/wp-content/themes/magus/assets/css/editor-style.css
@@ -717,6 +717,12 @@ pre {
   justify-content: center;
   padding: 0 1rem;
 }
+.awards--images-item:nth-child(odd) {
+  padding-left: 0;
+}
+.awards--images-item:nth-child(even) {
+  padding-right: 0;
+}
 @media (min-width: 50em) {
   .awards--images-item:first-child {
     padding-left: 0;
