--- a/wp-content/themes/magus/assets/css/styles.css
+++ b/wp-content/themes/magus/assets/css/styles.css
@@ -1317,6 +1317,12 @@ body.nav-open {
   justify-content: center;
   padding: 0 1rem;
 }
+.awards--images-item:nth-child(odd) {
+  padding-left: 0;
+}
+.awards--images-item:nth-child(even) {
+  padding-right: 0;
+}
 @media (min-width: 50em) {
   .awards--images-item:first-child {
     padding-left: 0;
