--- a/wp-content/themes/magus/src/styles/components/_awards.scss
+++ b/wp-content/themes/magus/src/styles/components/_awards.scss
@@ -18,6 +18,12 @@
 			align-items: center;
 			justify-content: center;
 			padding: 0 1rem;
+			&:nth-child(odd) {
+				padding-left: 0;
+			}
+			&:nth-child(even) {
+				padding-right: 0;
+			}
 			@include mq(medium) {
 				&:first-child {
 					padding-left: 0;
